src/components/generic/InputField/InputField.scss
$C: #{$WEBEX_COMPONENTS_CLASS_PREFIX}-input-field;

.#{$C} {
  display: flex;
  flex-direction: column;
  position: relative;

  .#{$C}__form-control {
    position: relative;
  }

  .#{$C}__input {
    font-size: 1rem;
    line-height: 1.5rem;
    background: var(--wxc-input-field--normal--background);
    border: var(--wxc-input-field--normal--border);
    color: var(--wxc-input-field--normal--color);
    border-radius: 0.5rem;
    padding: 0.1875rem 2.18rem 0.1875rem 0.75rem;
    cursor: pointer;
    width: 100%;
    box-sizing: border-box;

    &[type="number"] {
      -moz-appearance: textfield;

      &::-webkit-inner-spin-button,
      &::-webkit-outer-spin-button {
        -moz-appearance: none;
        -webkit-appearance: none;
        appearance:none;
        margin: 0;
      }

      &:hover::-webkit-inner-spin-button,
      &:hover::-webkit-outer-spin-button {
        -moz-appearance: none;
        -webkit-appearance: none;
        appearance:none;
        margin: 0;
      }
    }

    &:hover {
      background: var(--wxc-input-field--hover--background);
    }

    &:active {
      background: var(--wxc-input-field--active--background);
      border: var(--wxc-input-field--active--border);
      box-shadow: var(--wxc-input-field--active--box-shadow);
    }

    &:focus {
      background: var(--wxc-input-field--focus--background);
      border: var(--wxc-input-field--focus--border);
      color: var(--wxc-input-field--focus--color);
      box-shadow: var(--wxc-input-field--focus--box-shadow);
    }

    &:disabled {
      background: var(--wxc-input-field--disabled--background);
      border: var(--wxc-input-field--disabled--border);
      color: var(--wxc-input-field--disabled--color);
    }
  }

  &--error {
    .#{$C}__input {
      background: var(--wxc-error-input-field--normal--background);
      border: var(--wxc-error-input-field--normal--border);
      box-shadow: none;
      color: var(--wxc-text-color);

      &:hover {
        background: var(--wxc-input-field--hover--background);
        border: var(--wxc-error-input-field--normal--border);
        box-shadow: none;
      }

      &:active {
        background: var(--wxc-input-field--active--background);
        border: var(--wxc-error-input-field--normal--border);
        box-shadow: none;
      }

      &:focus {
        background: var(--wxc-input-field--focus--background);
        border: var(--wxc-error-input-field--normal--border);
        box-shadow: none;
      }
    }
  }

  .#{$C}__input-field-right-icon {
    position: absolute;
    color: var(--wxc-input-icon-color);
    top: 50%;
    right: 0;
    transform: translateY(-50%);

    &:not(:last-child) {
      right: 2rem;
    }

    &:hover, &:active, &:disabled {
      background: none;
    }
  }

  .#{$C}__input-controls {
    position: absolute;
    display: flex;
    flex-direction: column;
    border-left: var(--wxc-input-field--normal--border);
    right: 0.0625rem;
    top: 50%;
    transform: translateY(-50%);
    width: 1.9375rem;
    height: calc(100% - 0.125rem);

  }

  .#{$C}__input-increment-button {
    border-radius: 0 0.5rem 0 0;
  }

  .#{$C}__input-decrement-button {
    border-radius: 0 0 0.5rem 0;
  }

  .#{$C}__input-increment-button,
  .#{$C}__input-decrement-button {
    flex-basis: 50%;

    &:active {
      background: var(--wxc-input-field--active--background);
      border: var(--wxc-input-field--active--border);
      color: var(--wxc-input-field--active--color);
      box-shadow: var(--wxc-input-field--active--box-shadow);
    }

    &:focus {
      background: var(--wxc-input-field--focus--background);
      border: var(--wxc-input-field--focus--border);
      color: var(--wxc-input-field--focus--color);
      box-shadow: var(--wxc-input-field--focus--box-shadow);
    }

    &:disabled {
      background: var(--wxc-input-field--disabled--background);
      border: var(--wxc-input-field--disabled--border);
      color: var(--wxc-input-field--disabled--color);
      box-shadow: var(--wxc-input-field--disabled--box-shadow);
    }
  }
}

